--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 <li><a href="assigment_03/index.html">Assignment 3</a></li>
 <li><a href="Assigment-04/index.html">Assignment 4</a></li>
 <li><a href="Assignment-5a/index.html">Assignment 5a</a></li>
+<li><a href="Assignment-6/index.html">Assignment 6</a></li>
 
  </ul>
 </body>
