--- a/Assignment-6/index.html
+++ b/Assignment-6/index.html
@@ -84,6 +84,6 @@
 <a href="https://forms.saylaniwelfare.com/en" target="_blank">Regestraion Form</a>
 
 </center>
-
+<a href="../index.html">Back</a>
 </body>
 </html>
