Agian update and added animation of assignment 6

--- a/Assignment-6/index.html
+++ b/Assignment-6/index.html
@@ -5,34 +5,45 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Introduction to Saylani</title>
 
- 
  <link rel="stylesheet" href="style.css">
+
+ <link
+ rel="stylesheet"
+ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+
+
+
+
+
 </head>
 <body>
 <div class="main">
 
 
- <img src="img/download-removebg-preview (1).png" alt="">
+ <h1 class="animate__animated animate__flash"><img src="img/download-removebg-preview (1).png" alt=""></h1>
 
- <img class="smit" src="img/download-removebg-preview.png" alt="">
+ <h1 class="animate__animated animate__bounce"><img class="smit" src="img/download-removebg-preview.png" alt=""></h1> 
  
 </div>
 
 
+<h4 class="animate__animated animate__rollIn">
 <div class="para">
-<h1>Saylani Courses Admission Karachi 2023 </h1>
-<p>
+ 
+ <h1>Saylani Courses Admission Karachi 2023 </h1>
+ <p>
  Saylani courses admission Karachi 2023 is open for video editing, graphic designing, and others check the last date from this page. Interested candidates can obtain admission in their favorable courses. Those educated candidates who wish to earn money online can participate in Saylani Welfare Trust offered admission. There is a great chance to learn short skills that become you, freelancer. Since the inauguration of Saylani courses admission Karachi, it has produced several freelancers. Saylani Mass IT Training Program. To Train 10 Thousand Developers in Pakistan. They are earning well by obtaining Saylani Mass Training. In addition, the Saylani Welfare scheme is offering vocational courses that are very useful to earn offline in the local market. Currently, you can apply online for the following Saylani courses admissions 2023. <br>
  Visit the official website www.saylaniwelfare.com to fill up the Saylani Mass Training Admission Form. Each year Saylani Welfare opens admission in freelancing courses in the month of March to April. Presently Saylani welfare program is introducing several courses for free. The government of Pakistan wishes to support the youth so that they can play a positive character in the prosperity of Pakistan.
 
 </p>
-
+</h4>
 
 </div>
 
 
 
- 
+<h5 class="animate__animated animate__bounceInRight">
 <div class="box">
 
 
@@ -71,7 +82,7 @@
  <center>Video & 3D Animation</center>
  <div class="cnna">
   <center>Flutter</center>
-  
+ </h1>
  </div> 
 
 
@@ -79,11 +90,11 @@
 
 
 
-
-<center><h1>Join US</h1>
+<h3 class="animate__animated animate__flash">
+<center><h1>Join US</h5>
 <a href="https://forms.saylaniwelfare.com/en" target="_blank">Regestraion Form</a>
 
 </center>
-<a href="../index.html">Back</a>
+</h3>
 </body>
 </html>
