--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  </style>
  
 </head>
+
 <body>
- 
+<img src="img/FB_IMG_1668260410133.jpg" alt="" width="150px">
 <h1>Asslam o Alikum Everone! </h1>
 <p>My name is Muhammad Umair Abbasi , and Iam doing Software Engeering , Iam a Front End Developer (soon will be a Full Stack Developer)  </p>
 <h2>This is my assignments  </h2>
